deploy/policies/disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-allow-privilege-escalation
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [vault-shim]
      validate:
        message: "Containers must set securityContext.allowPrivilegeEscalation=false."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
